2.4.1 () -

------ current release ---------------------------

2.4.0 (2015-01-01) 670102842c39bdc62ef84ae4b679a8f5a2d89523

- TD-42 Cannot compile taskd - GNUTLS_VERSION undefined in diag.cpp (thanks
        to Michele Vetturi).
- TD-45 Fix preprocessor define (thanks to Jochen Sprickerhof).
- TD-55 TLSServer/Client need to include <errno.h> on Solaris (thanks to Tatjana
        Heuser). Also applied to NetBSD.
- TD-56 File.cpp needs to include <string.h> on Solaris (thanks to Tatjana
        Heuѕer).
- TD-57 taskdctl script assumes /bin/sh is /bin/bash (thanks to Tatjana Heuser).
- TD-79 Bad error message for wrong hostname configuration (thanks to Jens
        Erat).
- #1255 l10n translation utility improvements (thanks to Renato Alves).
- #1473 Make TASK_RCDIR customizable (thanks to Elias Probst).
- #1486 Truncated sentence in task-sync(5) manpage (thanks to Jakub Wilk).
- #1487 `tasksh` segmentation fault (thanks to Hector Arciga).
- #1492 task show to display default values when appropriate (thanks to Renato
        Alves).
- #1501 info report streamlining - partially implemented.
- #1503 build failure with musl libc due to undefined GLOB_BRACE and GLOB_TILDE
        (thanks to Natanael Copa).
- #1508 Show command highlight configuration (thanks to Nicolas Appriou).
- #1511 sync init crashes if client certification file is empty or invalid
        (thanks to Marton Suranyi).
- TW-1 Recurring task message on the same task (thanks to Profpatsch).
- TW-2 Unexpected behaviour - marking task as done releases task ID (thanks to
       Cory Donnelly).
- TW-5 color.due.today does not work (thanks to Max Muller).
- TW-14 Parent recurring tasks cannot be deleted (thanks to Miguel de Val Borro).
- TW-15 'task recurring' shows only children of recurring tasks (thanks to
        Louis-Claude Canon).
- TW-21 do not match a UDA if not followed by colon (thanks to Scott Kostyshak).
- TW-24 incorrect use of xterm colorization escape sequences (thanks to Steve
        Rader).